# Seguidores-Invisiveis

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Mundial do Palmeiras.null  PCH.h  PluginVersion.rc.in  README.md  Version.h.in  plugin.cpp  vcpkg-configuration.json  vcpkg.json
cmake/: Version.h.in
scripts/: mover.bat
src/: Logger.cpp  Logger.h  PCH.h  plugin.cpp
